<resources>

    <string name="score">Score</string>
    <string name="_0">0</string>

    <string name="how_well_do_you_know_your_spouse">How well do you know your spouse?</string>

    <string name="question_1">Question 1</string>
    <string name="who_made_the_first_move">Who made the first move?</string>
    <string name="husband">husband</string>
    <string name="wife">wife</string>

    <string name="question_2">Question 2</string>
    <string name="how_did_you_meet_each_other">How did you meet each other?</string>
    <string name="mutual_friends">Mutual Friends</string>
    <string name="social_media">Social Media</string>

    <string name="question_3">Question 3</string>
    <string name="what_month_and_year_were_you_married">What month and year were you married?</string>
    <string name="august_2015">August , 2015</string>
    <string name="september_2014">September , 2014</string>

    <string name="question_4">Question 4</string>
    <string name="select_the_correct_answer">Select the correct answer</string>
    <string name="got_married_at_12_noon">Got married at 12 noon</string>
    <string name="got_married_on_wednesday">Got married on Wednesday</string>
    <string name="got_married_in_myrtle_beach">Got married in Myrtle Beach</string>
    <string name="none">None</string>

    <string name="question_5">Question 5</string>
    <string name="what_is_the_family_name">What is the family name?</string>
    <string name="enter_last_name">enter last name</string>

    <string name="submit_quiz">Submit Quiz</string>

    <string name="retake_quiz">Retake Quiz</string>
    <string name="save_answer">Save Answer</string>
</resources>
