<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginEnd="@dimen/main_layout_marginLeft"
    android:layout_marginLeft="@dimen/main_layout_marginLeft"
    android:layout_marginRight="@dimen/main_layout_marginRight"
    android:layout_marginStart="@dimen/main_layout_marginLeft"
    android:background="@drawable/quizbackimg"
    tools:context=".MainActivity"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/score"
            android:textColor="#9b0000"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/_0"
            android:textColor="#9b0000"
            android:textSize="45sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <!-- Questions and submit button all wrapped in scrollview while the score remains fixed along with the retake/reset button -->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/how_well_do_you_know_your_spouse"
                android:textColor="#a4c635"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textColor="#9b0000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/who_made_the_first_move"
                android:textColor="#12005e"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/q1RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/q1C1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickRadioButton"
                    android:text="@string/husband"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/q1C2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickRadioButton"
                    android:text="@string/wife"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/question_2"
                android:textColor="#9b0000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/how_did_you_meet_each_other"
                android:textColor="#12005e"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/q2RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/q2C1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickRadioButton"
                    android:text="@string/mutual_friends"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/q2C2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickRadioButton"
                    android:text="@string/social_media"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/question_3"
                android:textColor="#9b0000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/what_month_and_year_were_you_married"
                android:textColor="#12005e"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/q3RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/q3C1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickRadioButton"
                    android:text="@string/august_2015"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/q3C2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickRadioButton"
                    android:text="@string/september_2014"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/question_4"
                android:textColor="#9b0000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q4Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="5dp"
                android:text="@string/select_the_correct_answer"
                android:textColor="#12005e"
                android:textSize="20sp"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/q4C1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/got_married_at_12_noon"
                android:textSize="20sp"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/q4C2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/got_married_on_wednesday"
                android:textSize="20sp"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/q4C3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/got_married_in_myrtle_beach"
                android:textSize="20sp"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/q4C4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/none"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/question_5"
                android:textColor="#9b0000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q5Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/what_is_the_family_name"
                android:textColor="#12005e"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/question5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/enter_last_name"
                android:inputType="text"
                android:maxLength="10"
                android:textColorHint="#00ced1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/q5AnswerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:onClick="onClickEditText"
                android:text="@string/save_answer" />

        </LinearLayout>
    </ScrollView>
    <!-- Scroll ends here -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/submitAnswersButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="#00ced1"
            android:onClick="submitAnswers"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/submit_quiz"
            android:textStyle="italic" />

        <Button
            android:id="@+id/retakeButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submitAnswersButton"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="#00ced1"
            android:onClick="RetakeQuiz"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/retake_quiz"
            android:textStyle="italic" />
    </RelativeLayout>

</RelativeLayout>




